fixed horizontal scrolling showing white space on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,6 @@ html {
 
 body {
   overscroll-behavior: contain;
-  overflow-x: hidden; /* Prevent horizontal scrolling */
-
 
 }
 
